--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,7 +1,11 @@
-<div fxLayout="row" fxLayoutAlign="end center" >
+<div fxLayout="row" fxLayoutAlign="end center">
   <button routerLink="/create" mat-raised-button color="primary">+Create New</button>
 </div>
 <div>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  </mat-form-field>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
@@ -9,31 +13,31 @@
 
     <!-- Id Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef> id</th>
+      <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
     </ng-container>
 
     <!-- Cin Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> type </th>
-      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      <th mat-header-cell *matHeaderCellDef> type</th>
+      <td mat-cell *matCellDef="let element"> {{ element.type }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="titre">
-      <th mat-header-cell *matHeaderCellDef> name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef> name</th>
+      <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
     </ng-container>
 
     <!-- CreatedDate Column -->
     <ng-container matColumnDef="createdDate">
-      <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
-      <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
+      <th mat-header-cell *matHeaderCellDef> CreatedDate</th>
+      <td mat-cell *matCellDef="let element"> {{ element.createdDate }}</td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> Actions</th>
       <td mat-cell *matCellDef="let element">
         <button routerLink="/{{element.id}}/edit">
           <mat-icon>edit</mat-icon>
