--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,37 +1,37 @@
 <div fxLayout="row" fxLayoutAlign="end center">
-  <button routerLink="/create" mat-raised-button color="primary">+Create New</button>
+  <button (click)="openDialog()" mat-raised-button color="primary">+Create New</button>
 </div>
 <div>
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
   </mat-form-field>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort (matSortChange)="announceSortChange($event)">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Id Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> id</th>
       <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
     </ng-container>
 
     <!-- Cin Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> type</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by type"> type</th>
       <td mat-cell *matCellDef="let element"> {{ element.type }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="titre">
-      <th mat-header-cell *matHeaderCellDef> name</th>
-      <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by titre"> titre</th>
+      <td mat-cell *matCellDef="let element"> {{ element.titre }}</td>
     </ng-container>
 
     <!-- CreatedDate Column -->
     <ng-container matColumnDef="createdDate">
-      <th mat-header-cell *matHeaderCellDef> CreatedDate</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> CreatedDate</th>
       <td mat-cell *matCellDef="let element"> {{ element.createdDate }}</td>
     </ng-container>
 
