--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" >
   <legend>Create Article</legend>
   <mat-form-field>
     <mat-label>type</mat-label>
@@ -11,7 +11,7 @@
   <br>
   <mat-dialog-actions>
     <button class="mat-raised-button"(click)="close()">Close</button>
-    <button class="mat-raised-button mat-primary"(click)="save()">Save</button>
+    <button class="mat-raised-button mat-primary">Save</button>
   </mat-dialog-actions>
 </form>
 
