--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -30,9 +30,19 @@
     </ng-container>
 
     <!-- CreatedDate Column -->
-    <ng-container matColumnDef="createdDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> CreatedDate</th>
-      <td mat-cell *matCellDef="let element"> {{ element.createdDate }}</td>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> date</th>
+      <td mat-cell *matCellDef="let element"> {{ element.date }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="auteur">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> auteur</th>
+      <td mat-cell *matCellDef="let element"> {{ element.auteur }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="lien">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by created date"> lien</th>
+      <td mat-cell *matCellDef="let element"> {{ element.lien }}</td>
     </ng-container>
 
     <!-- Actions Column -->
